--- a/src/app/core/cart/cart-content/cart-content.component.scss
+++ b/src/app/core/cart/cart-content/cart-content.component.scss
@@ -11,12 +11,12 @@
         pointer-events: none;
       }
 
-      &:hover {
+      //&:hover {
         .icon-button {
           opacity: 1;
           pointer-events: auto;
         }
-      }
+      //}
     }
 
 
